test/analyze/name_resolution/match_test_scope.exp
Error: Could not resolve name `y` to value
test/analyze/name_resolution/match_test_scope.myte:13:5
 13 |     (y, z);
    |      ^

Error: Could not resolve name `z` to value
test/analyze/name_resolution/match_test_scope.myte:13:8
 13 |     (y, z);
    |         ^

Error: Could not resolve name `a` to value
test/analyze/name_resolution/match_test_scope.myte:16:5
 16 |     (a, b);
    |      ^

Error: Could not resolve name `b` to value
test/analyze/name_resolution/match_test_scope.myte:16:8
 16 |     (a, b);
    |         ^

Error: Could not resolve name `y` to value
test/analyze/name_resolution/match_test_scope.myte:17:5
 17 |     (y, z);
    |      ^

Error: Could not resolve name `z` to value
test/analyze/name_resolution/match_test_scope.myte:17:8
 17 |     (y, z);
    |         ^

Error: Could not resolve name `y` to value
test/analyze/name_resolution/match_test_scope.myte:21:3
 21 |   (y, z);
    |    ^

Error: Could not resolve name `z` to value
test/analyze/name_resolution/match_test_scope.myte:21:6
 21 |   (y, z);
    |       ^

Error: Could not resolve name `y` to value
test/analyze/name_resolution/match_test_scope.myte:29:6
 29 |   if (y match y) {
    |       ^